SONARGO-25 Add support for analyzing Go on Linux ARM64